syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "gogoproto/gogo.proto";

package storage;

// Next available tag: 3
message ActiveComponent {
    // base 64 encoded Deployment:ActiveComponent ids.
    string id = 1;

    // Represent a context of the active edge.
    message ActiveContext {
        string container_name = 1;
        string image_id       = 2 [(gogoproto.moretags) = "search:\"Image Sha,hidden,store\""];
    }

    // Map from container name to the active context of an edge.
    map<string, ActiveContext> active_contexts = 2;
}
